Fixing bad align of the random card div on index

--- a/static/css/magic.css
+++ b/static/css/magic.css
@@ -116,4 +116,5 @@ body {
 
 .randomCard {
 	display:inline-block;
+	vertical-align: top;
 }
